--- a/client/src/containers/ViewTestingRun/bugsTable.scss
+++ b/client/src/containers/ViewTestingRun/bugsTable.scss
@@ -65,6 +65,7 @@
           margin-bottom: 10px;
           margin-right: 10px;
           font-weight: 500;
+          font-size: 14px;
         }
 
         .bug-detail-value
@@ -98,7 +99,7 @@
           overflow: hidden;
           text-overflow: ellipsis;
           font-family: monospace;
-          font-size: 12px;
+          font-size: 11px;
           white-space: pre;
           word-break: break-all;
         }
